# bumpify

./: .bumpify.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tasks.py
.circleci/: config.yml
bumpify/: context.py  exc.py  utils.py
bumpify/core/api/: commands.py  interface.py  presenters.py
bumpify/core/config/: exc.py  implementation.py  objects.py
bumpify/core/console/: _message_formatter.py  helpers.py  interface.py  objects.py  output.py
bumpify/core/filesystem/: exc.py  helpers.py  implementation.py  interface.py
bumpify/core/hook/: implementation.py
bumpify/core/notifier/: implementation.py  interface.py  objects.py
bumpify/core/prompt/: implementation.py  interface.py
bumpify/core/semver/: _changelog_formatters.py  _version_file_updater.py  exc.py  helpers.py  implementation.py  interface.py  objects.py
bumpify/core/status/: interface.py
bumpify/core/vcs/: exc.py  helpers.py  interface.py  objects.py
bumpify/core/vcs/implementation/: git.py  proxy.py
bumpify/delivery/cli/: __main__.py
bumpify/di/: __init__.py  api.py  config.py  console.py  filesystem.py  notifier.py  prompt.py  semver.py  vcs.py
bumpify/presenters/: api.py
bumpify/providers/: __init__.py  api.py
tests/: conftest.py  helpers.py  matchers.py
tests/data/templates/dummy-project/: README.md.txt  pyproject.toml.txt
tests/e2e/: conftest.py  interface.py  test_bump.py  test_init.py  test_root.py
tests/functional/: test_api.py  test_config.py  test_filesystem.py  test_hook.py  test_semver.py
tests/functional/vcs/: test_git.py  test_proxy.py
(+3 files in other folders)
