[tool.poetry]
name = "bumpify"
version = "0.1.0"
description = "Semantic versioning automation tool for software projects"
authors = ["Maciej Wiatrzyk <maciej.wiatrzyk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
pydio = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mockify = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
